--- a/assets/slitslider/css/custom.css
+++ b/assets/slitslider/css/custom.css
@@ -1,6 +1,6 @@
  .sl-slider-wrapper {
-	width: 100%;
-	height: 500px;
+	width: 93%;
+	height: 400px;
 	overflow: hidden;
 	position: relative;
 }
@@ -160,12 +160,92 @@
 	background: rgba(255,255,255,0.8);
 }
 
-/* Content elements */
+/* Content elements */ 
 
+/* .container {
+	width: 80%;
+	margin: 80px auto;
+} */
 
+.row{
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+.col {
+	flex-basis: 50%;
+	min-width: 250px;
+}
+
+.feature-img{
+	width: 83%;
+	margin: auto;
+	position: relative;
+	border-radius: 6px;
+	overflow: hidden;
+}
+
+.small-img-row{
+	display: flex;
+	background: #382020;
+	margin: 20px 0;
+	align-items: center;
+	border-radius: 6px;
+	overflow: hidden;
+	width: 85%
+}
+
+.small-img{
+    position: relative;
+}
+.small-img img{
+	width: 150px;
+}
+
+.small-img-row p{
+    margin-left: 20px;
+	color: #6c65b3;
+	line-height: 22px;
+	font-size: 15px;
+	font-style: italic;
+}
+
+.play-btn{
+	width: 60px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	cursor: pointer;
+}
+
+.small-img .play-btn{
+	width: 35px;
+}
+.video-player {
+	width: 80%;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	display: none;
+}
+
+video:focus{
+	outline: none;
+}
+
+.close-btn{
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	width: 30px; 
+	cursor: pointer;
+}
 
  .bg-img-1 {
-	background-image: url(../../../images/slider/1.jpg);
+	background-image: url(https://www.youtube.com/embed/3gCI-rwBRoI);
 }
  .bg-img-2 {
 	background-image: url(../../../images/slider/2.jpg);
@@ -181,6 +261,7 @@
 }
 
 /* Animations for content elements */
+
 
 .sl-trans-elems .deco{
 	-webkit-animation: roll 1s ease-out both, fadeIn 1s ease-out both;
