--- a/assets/slitslider/css/custom.css
+++ b/assets/slitslider/css/custom.css
@@ -245,10 +245,10 @@ video:focus{
 }
 
  .bg-img-1 {
-	background-image: url(https://www.youtube.com/embed/3gCI-rwBRoI);
+	background-image: url(../../../images/slider/family.jpg);
 }
  .bg-img-2 {
-	background-image: url(../../../images/slider/2.jpg);
+	background-image: url(../../../images/slider/meeting.jpg);
 }
  .bg-img-3 {
 	background-image: url(../../../images/slider/3.jpg);
